src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail38.jova
class Test{

    public int nestedIsland() {
        int var;
        var = func("blabla", 42);
        return 0;
    }

}